--- a/templates/detail.html.twig
+++ b/templates/detail.html.twig
@@ -23,7 +23,8 @@
 {% block content %}
 <div class="row" style="min-height: 600px";> {# Begin bevenste gedeelte #}
 
-<div class="col-md-5" style="background-image: url('assets/img/gerechten/{{data.0.gerecht.afbeelding}}')">   {#kolom met plaatje #}
+<div class="col-md-5" 
+    style="background-image: url('assets/img/gerechten/{{data.0.gerecht.afbeelding}}')">   {#kolom met plaatje #}
 </div>
 
 <div class="col-md-7" style="background-color: #FFF">
@@ -103,17 +104,16 @@
     <!-- content -->
     <div id="Ingredienten" class="tabcontent">
         {% for record in data.0.ingredienten %}
-        <div class="row">
-            <div class="col-md-2" 
-                style="background-image: url('assets/img/artikelen/{{record.afbeelding}}');"> 
-                <br> <br> <br> <br> <br> <br>
+            <div class="row" style="min-height: 100px";>
+                <div class="col-md-1" 
+                    style="background-image: url('assets/img/artikelen/{{record.afbeelding}}');"> 
+                </div>
+                <div class="col-md-11">
+                    <h3> {{record.naam}} </h3>
+                    {{record.omschrijving}} <br>
+                    Hoeveelheid: {{record.aantal}} {{record.eenheid}} 
+                </div>
             </div>
-            <div class="col-md-10">
-                {{record.naam}} <br>
-                {{record.omschrijving}} <br>
-                Hoeveelheid: {{record.aantal}} {{record.eenheid}} 
-            </div>
-        </div>
         {% endfor %}
     </div>
 
