Bezig met spacing

--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -32,7 +32,8 @@
         {% endblock %}   
     </div> <!-- background-image -->
 
-    {# 2de row met de agenda (moet nog worden opgeslits in homepage.html met agenda en login los) #}
+    {# 2de row met de agenda #}
+    <div class="pt-5"> <!-- opent ruimte tussen header en daaronder -->
     <div class="row">
         <div class="col-md-3" style="background-color: #FFF">
             <div class="col-md-12" style="background-color: #6e8722"> 
@@ -60,6 +61,7 @@
             <i class="fa fa-file-pdf"></i><a href="https://www.layoutit.com/build">Layout-it</a>
             -->
         </div> {# Eindigd de col 3 #}
+        
 
 
         <!-- Content -->
@@ -71,6 +73,8 @@
             </div>
         </div> {# eindigd col 9 #}
     </div> {# Einigd class row #}
+    </div>{# EIndigd de pt-5 #}
+
 
     {# 3de en laatste row met de footer #}
     <div class="row">
