div contaier met width werkende proberen krijgen

--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -1,3 +1,4 @@
+<div class="container" width="1680px"> 
 <html lang="nl">
 <head>
 
@@ -23,10 +24,6 @@
 </html>                                                                         <!-- Waarom stoppen we HTML hier? -->
 <body>
 
-<div class="pl-5">
-<div class="pr-5">
-<div class="pl-5">
-<div class="pr-5">
 <div class="container-fluid">
 
     {# 1ste row met de header 12 #}
@@ -97,9 +94,7 @@
 
 
 </div> {# Einde container #}
-</div>
-</div>
-</div>
-</div>
 
 </body>
+
+</div> {# container width #}
