--- a/templates/detail.html.twig
+++ b/templates/detail.html.twig
@@ -120,7 +120,7 @@
     <div id="Bereidingswijze" class="tabcontent">
         {% for record in data.0.bereidingswijze %}
         <div class="row" style="min-height: 50px";>
-            <div class="col-md-1"> {{record.nummeriekveld}}. </div>
+            <div class="col-md-1" style="background-color: #fca01f; width: 50px; border-radius: 50%"> {{record.nummeriekveld}}. </div>
             <div class="col-md-11"> {{record.tekstveld}} </div>
         </div>
         {% endfor %}
