--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -1,4 +1,3 @@
-<div class="container" width="1680px"> 
 <html lang="nl">
 <head>
 
@@ -24,6 +23,7 @@
 </html>                                                                         <!-- Waarom stoppen we HTML hier? -->
 <body>
 
+
 <div class="container-fluid">
 
     {# 1ste row met de header 12 #}
@@ -36,7 +36,7 @@
     {# 2de row met de agenda #}
     <div class="row">
     
-        <div class="col-md-3" style="background-color: #FFF">
+        <div class="col-md-3 " style="background-color: #FFF">
             <div class="p-5"> <!-- opent ruimte rondom agenda -->
             <div class="col-md-12" style="background-color: #6e8722"> 
                 <center> <img src="assets/img/verrukkulluk-agenda.png" style="height: 80px; width: 187px"/> </center> <br>
@@ -70,7 +70,7 @@
 
 
         <!-- Content -->
-        <div class="col-md-9" style="background-color: #FFF">
+        <div class="col-md-9" >
             <div class="row">
                 {%  block content %}
 
@@ -96,5 +96,3 @@
 </div> {# Einde container #}
 
 </body>
-
-</div> {# container width #}
