shadows toegevoegd aan detail

--- a/templates/detail.html.twig
+++ b/templates/detail.html.twig
@@ -21,10 +21,12 @@
 
 
 {% block content %}
-<div class="p-5 shadow">
+<div class="p-5">
+<div class="" style="box-shadow: 6px 6px 20px 15px rgba(120, 117, 119, 0.5);background-color: #ffffff">
 <div class="row" style="min-height: 600px";> {# Begin bevenste gedeelte #}
 
-<div class="col-md-5" 
+
+<div class="col-md-5"
     style="background-image: url('assets/img/gerechten/{{data.0.gerecht.afbeelding}}'); background-position: center; background-size: cover">   {#kolom met plaatje #}
 </div>
 
@@ -87,6 +89,7 @@
     </div>
 
 </div> {# Einde rechter kant #}
+</div> {# div voor shadow #}
 </div> {# Einde geheel bovenste gedeelte #}
 
 
