width toegevoegd en agenda groter gemaakt

--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -24,7 +24,7 @@
 <body>
 
 
-<div class="container-fluid">
+<div class="container-fluid"  style="width: 1700px">
 
     {# 1ste row met de header 12 #}
     <div id="background-image"> 
@@ -36,7 +36,7 @@
     {# 2de row met de agenda #}
     <div class="row">
     
-        <div class="col-md-3 " style="background-color: #FFF">
+        <div class="col-md-4 " style="background-color: #FFF">
             <div class="p-5"> <!-- opent ruimte rondom agenda -->
             <div class="col-md-12 p-4" style="background-color: #6e8722">                                                           {# Voegt groene achterkant toe en padding rond tekst#}
                 <center> <img src="assets/img/verrukkulluk-agenda.png" style="height: 80px; width: 187px"/> </center> <br>
@@ -70,7 +70,7 @@
 
 
         <!-- Content -->
-        <div class="col-md-9" >
+        <div class="col-md-8" >
             <div class="row">
                 {%  block content %}
 
