--- a/templates/detail.html.twig
+++ b/templates/detail.html.twig
@@ -23,7 +23,7 @@
 {% block content %}
 <div class="p-5">
 <div class="" style="box-shadow: 6px 6px 20px 15px rgba(120, 117, 119, 0.5);background-color: #ffffff">
-<div class="row" style="min-height: 600px";> {# Begin bevenste gedeelte #}
+<div class="row"> {# Begin bevenste gedeelte. Hier kan je min-height achter zetten, maar de omschrijving hieronder doet dat ook al#}  
 
 
 <div class="col-md-5"
@@ -74,7 +74,7 @@
     </div>
 
     {# omschrijving #}
-    <div class="row" style="min-height: 600px";>
+    <div class="row" style="min-height: 410px";>
         {{data.0.gerecht.lange_omschrijving}}
     </div>
 
