van gerecht omschrijving height 150 gemaakt

--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -72,7 +72,7 @@
 
         {# Hier start de 3de row met de beschijving #}
         <div class="row" >
-        <div class="col-md-12" style="background-color: #FFF; min-height: 150px"> 
+        <div class="col-md-12" style="background-color: #FFF; height: 150px"> 
         {{ record.gerecht.korte_omschrijving }} 
         </div>
         </div>
