--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -28,7 +28,7 @@
 
     {# 1ste row met de header 12 #}
     <div id="background-image"> 
-        <img src="assets/img/logo-v2.png"/>         {# Dit gedeelte voegt het logo toe #}
+        <a href="http://localhost/educom-verrukkulluk-1668679088/index.php"> <img src="assets/img/logo-v2.png"/> </a>         {# Dit gedeelte voegt het logo toe met eenlink naar de homepage#}
         {% block header %}
         {% endblock %}   
     </div> <!-- background-image -->
