--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,6 +78,14 @@ h3, h4, h5 {
     color: #FFF;
 }
 
+.shadow {
+    box-shadow: 6px 6px 20px 15px rgba(120, 117, 119, 0.5);
+}
+
+.background-wit {
+    background-color: #FFF;
+}
+
 /** HTML / BODY **/
 html, body {
     font-family: "Helvetica Neue", Arial, SansSerif;
