refereert meer naar main.css

--- a/templates/detail.html.twig
+++ b/templates/detail.html.twig
@@ -22,15 +22,14 @@
 
 {% block content %}
 <div class="p-5">
-<div class="" style="box-shadow: 6px 6px 20px 15px rgba(120, 117, 119, 0.5);background-color: #ffffff">
-<div class="row"> {# Begin bevenste gedeelte. Hier kan je min-height achter zetten, maar de omschrijving hieronder doet dat ook al#}  
+<div class="row shadow background-wit"> {# Begin bevenste gedeelte. Hier kan je min-height achter zetten, maar de omschrijving hieronder doet dat ook al#}  
 
 
 <div class="col-md-5"
     style="background-image: url('assets/img/gerechten/{{data.0.gerecht.afbeelding}}'); background-position: center; background-size: cover">   {#kolom met plaatje #}
 </div>
 
-<div class="col-md-7" style="background-color: #FFF">
+<div class="col-md-7 background-wit">
     {# cijfers van personen, prijs en calorieen #}
     <div class="row">
         <div class="col-md-2"> 
@@ -89,7 +88,6 @@
     </div>
 
 </div> {# Einde rechter kant #}
-</div> {# div voor shadow #}
 </div> {# Einde geheel bovenste gedeelte #}
 
 
