background color naam aangepast

--- a/templates/detail.html.twig
+++ b/templates/detail.html.twig
@@ -22,14 +22,14 @@
 
 {% block content %}
 <div class="p-5">
-<div class="row shadow background-wit"> {# Begin bevenste gedeelte. Hier kan je min-height achter zetten, maar de omschrijving hieronder doet dat ook al#}  
+<div class="row shadow background-white"> {# Begin bevenste gedeelte. Hier kan je min-height achter zetten, maar de omschrijving hieronder doet dat ook al#}  
 
 
 <div class="col-md-5"
     style="background-image: url('assets/img/gerechten/{{data.0.gerecht.afbeelding}}'); background-position: center; background-size: cover">   {#kolom met plaatje #}
 </div>
 
-<div class="col-md-7 background-wit">
+<div class="col-md-7 background-white">
     {# cijfers van personen, prijs en calorieen #}
     <div class="row">
         <div class="col-md-2"> 
