--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -20,23 +20,26 @@
     <script src="assets/jquery/jquery-3.5.1.js"></script>
     <script src="assets/vegas/vegas.js"> </script>
 
-</html>                                                                         <!-- Waarom stoppen we HTML hier? -->
+</head>
 <body>
 
 
 <div class="container-fluid"  style="width: 1700px">
 
-    {# 1ste row met de header 12 #}
+    {# 1ste row met de header 12 -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- #}
     <div id="background-image"> 
         <a href="http://localhost/educom-verrukkulluk-1668679088/index.php"> <img src="assets/img/logo-v2.png"/> </a>         {# Dit gedeelte voegt het logo toe met eenlink naar de homepage#}
         {% block header %}
         {% endblock %}   
     </div> <!-- background-image -->
 
-    {# 2de row met de agenda #}
+    {# 2de row met de agenda en login ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------- #}
     <div class="row">
     
+        {# Linker helft ======================================================== #}
         <div class="col-md-4 " style="background-color: #FFF">
+
+            {# ///////////////// Agenda ///////////////// #}
             <div class="p-5"> <!-- opent ruimte rondom agenda -->
             <div class="col-md-12 p-4" style="background-color: #6e8722">                                                           {# Voegt groene achterkant toe en padding rond tekst#}
                 <center> <img src="assets/img/verrukkulluk-agenda.png" style="height: 80px; width: 187px"/> </center> <br>
@@ -48,14 +51,15 @@
             </div> {# Einde agenda class #} {# Hier stonden de line breaks #}
             </div>{# EIndigd de pt-5 #}
 
+            {# ///////////////// Login ///////////////// #}
             <div class="p-5">
-            <div class="col-md-12 p-4" style="background-color: #b31714">
+            <div class="col-md-12 p-4 background-red">
                 <center class="pb-3"> <img src="assets/img/verrukkulluk-login.png" style="height: 80px; width: 187px"/> </center>
                 <form id="form">
-                    <div class="wit pb-3"> Email: 
+                    <div class="white pb-3"> Email: 
                     <input type="text" name="name" style="width: 350px"> </div>
 
-                    <div class="wit pb-4"> Wachtwoord 
+                    <div class="white pb-4"> Wachtwoord 
                     <input type="text" name="wachtwoord" style="width: 350px"> </div>
                 </form>
                 <center> <div id="login" class="login_button"> Login </div> </center>                                               {# Login button#}
@@ -68,10 +72,10 @@
             <i class="fa fa-calendar"></i> FontAwesome <a href="https://fontawesome.com/icons?d=gallery&m=free">Documentation</a><br>
             <i class="fa fa-file-pdf"></i><a href="https://www.layoutit.com/build">Layout-it</a>
             -->
-        </div> {# Eindigd de col 3 #}
+        </div> {# Eindigd de col md-4 #}
         
 
-
+        {# rechter helft ======================================================== #}
         <!-- Content -->
         <div class="col-md-8" >
             <div class="row">
@@ -83,7 +87,7 @@
     </div> {# Einigd class row #}
 
 
-    {# 3de en laatste row met de footer #}
+    {# 3de en laatste row met de footer --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- #}
     <div class="row">
         <div class="col-md-12" style="background-color: #e85d04; color: #FFF">
             <img src="assets/img/verrukkulluk-pay-off.png" style="height: 100px; width: 100px"/> <br>
@@ -96,6 +100,7 @@
     </div>
 
 
-</div> {# Einde container #}
+</div> {# Einde container-fluid #}
 
 </body>
+</html>    
